working interceptors and tests